--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "homepage": "https://github.com/mr-vishist/pitchPDF#readme",
   "dependencies": {
     "firebase": "^12.8.0",
-    "html2pdf.js": "^0.14.0",
     "next": "^16.1.4",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
+    "puppeteer": "^24.36.0",
+    "razorpay": "^2.9.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   }
